@@ -617,6 +617,7 @@
 3) init.d: optimize switch reinit procesure.<br>
 4) init.d: more human readable variable name and prevent overwrites in dependen logic.<br>
 5) init.d: touch switch in some cases make depend at switch parth instead of direct mode check.<br>
+6) init.d: switch workaround in kext use config-vlan.sh instead off config-switch.sh.<br>
 <br>
 <br>
 <b>TODO:</b><br>
